--- a/coolcafe/src/main/resources/templates/login.html
+++ b/coolcafe/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
                                     <input type="checkbox" checked="checked"/>
                                     <div class="control__indicator"></div>
                                 </label>
-                                <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span>
+                                <span class="ml-auto"><a href="forget-password" class="forgot-pass">Forgot Password</a></span>
                             </div>
 
                             <input type="submit" value="Log In" class="btn btn-block btn-primary">
