--- a/coolcafe/src/main/resources/templates/reset-password.html
+++ b/coolcafe/src/main/resources/templates/reset-password.html
@@ -30,9 +30,10 @@
                         </div>
                         <form th:action="@{/reset-password}" method="post">
                             <div class="form-group first">
-                                <label for="password">New Password</label>
-                                <input name="password" required type="text" class="form-control" placeholder="Your new password" id="username">
+                                <label for="newPassword">New Password</label>
+                                <input name="newPassword" required type="text" class="form-control" placeholder="Your new password" id="newPassword">
                             </div>
+                            <input id="tokenInput" type="hidden" name="token" th:value="${token}" />
                             <input type="submit" value="Send Email" class="btn btn-block btn-primary">
                         </form>
                     </div>
@@ -43,6 +44,13 @@
 
 
 </div>
+
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const token = urlParams.get('token');
+
+    document.getElementById("tokenInput").value = token;
+</script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
