Update: Update to version 2.0

--- a/coolcafe/src/main/resources/templates/dashboard/charts.html
+++ b/coolcafe/src/main/resources/templates/dashboard/charts.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Charts - Kaiadmin Bootstrap 5 Admin Dashboard</title>
+    <title>CoolCafe`</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -137,10 +137,6 @@
                         class="avatar-img rounded-circle"
                       />
                     </div>
-                    <span class="profile-username">
-                      <span class="op-7">Hi,</span>
-                      <span class="fw-bold">Hizrian</span>
-                    </span>
                   </a>
                   <ul class="dropdown-menu dropdown-user animated fadeIn">
                     <div class="dropdown-user-scroll scrollbar-outer">
@@ -148,32 +144,21 @@
                         <div class="user-box">
                           <div class="avatar-lg">
                             <img
-                              src="/dashboard_layout/img/profile.jpg"
-                              alt="image profile"
-                              class="avatar-img rounded"
+                                    src="/dashboard_layout/img/profile.jpg"
+                                    alt="image profile"
+                                    class="avatar-img rounded"
                             />
                           </div>
                           <div class="u-text">
                             <h4>Hizrian</h4>
-                            <p class="text-muted">hello@example.com</p>
-                            <a
-                              href="profile.html"
-                              class="btn btn-xs btn-secondary btn-sm"
-                              >View Profile</a
-                            >
+                            <p class="text-muted"></p>
+                            <form action="/logout" method="POST">
+                              <button type="submit" class="btn btn-xs btn-secondary btn-sm">Logout</button>
+                            </form>
                           </div>
                         </div>
                       </li>
-                      <li>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">My Profile</a>
-                        <a class="dropdown-item" href="#">My Balance</a>
-                        <a class="dropdown-item" href="#">Inbox</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Account Setting</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Logout</a>
-                      </li>
+
                     </div>
                   </ul>
                 </li>
