--- a/coolcafe/src/main/resources/templates/dashboard/index.html
+++ b/coolcafe/src/main/resources/templates/dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Kaiadmin - Bootstrap 5 Admin Dashboard</title>
+    <title>CoolCafe`</title>
     <meta
             content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
             name="viewport"
@@ -100,8 +100,6 @@
                                     />
                                 </div>
                                 <span class="profile-username">
-                      <span class="op-7">Hi,</span>
-                      <span class="fw-bold">Hizrian</span>
                     </span>
                             </a>
                             <ul class="dropdown-menu dropdown-user animated fadeIn">
@@ -117,24 +115,12 @@
                                             </div>
                                             <div class="u-text">
                                                 <h4>Hizrian</h4>
-                                                <p class="text-muted">hello@example.com</p>
-                                                <a
-                                                        href="profile.html"
-                                                        class="btn btn-xs btn-secondary btn-sm"
-                                                >View Profile</a
-                                                >
+                                                <p class="text-muted"></p>
+                                                <form action="/logout" method="POST">
+                                                    <button type="submit" class="btn btn-xs btn-secondary btn-sm">Logout</button>
+                                                </form>
                                             </div>
                                         </div>
-                                    </li>
-                                    <li>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">My Profile</a>
-                                        <a class="dropdown-item" href="#">My Balance</a>
-                                        <a class="dropdown-item" href="#">Inbox</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Account Setting</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Logout</a>
                                     </li>
                                 </div>
                             </ul>
