--- a/coolcafe/src/main/resources/templates/dashboard/sidebar.html
+++ b/coolcafe/src/main/resources/templates/dashboard/sidebar.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CoolCafe`</title>
 </head>
 <body>
 <div class="sidebar" data-background-color="dark">
     <div class="sidebar-logo">
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="dark">
-            <a href="/index" class="logo">
-                <img
-                        src="/dashboard_layout/img/kaiadmin/logo_light.svg"
-                        alt="navbar brand"
-                        class="navbar-brand"
-                        height="20"
-                />
+            <a href="/" class="logo">
+                CoolCafe`
             </a>
             <div class="nav-toggle">
                 <button class="btn btn-toggle toggle-sidebar">
@@ -34,44 +30,66 @@
     <div class="sidebar-wrapper scrollbar scrollbar-inner">
         <div class="sidebar-content">
             <ul class="nav nav-secondary">
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasRole('STORE_OWNER')">
                     <a href="/dashboard">
                         <i class="fas fa-home"></i>
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a data-bs-toggle="collapse" href="#charts">
-                        <i class="far fa-chart-bar"></i>
-                        <p>Statistics</p>
-                        <span class="caret"></span>
-                    </a>
-                    <div class="collapse" id="charts">
-                        <ul class="nav nav-collapse">
-                            <li>
-                                <a href="/statistics/selling">
-                                    <span class="sub-item">Selling statistics</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/statistics/import">
-                                    <span class="sub-item">Import statistics</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a href="/widgets">
-                        <i class="fas fa-desktop"></i>
-                        <p>Widgets</p>
+
+                <li class="nav-item" sec:authorize="hasRole('STORE_OWNER')">
+                    <a href="/statistics/selling">
+                        <i class="fas fa-home"></i>
+                        <p>Selling Statistics</p>
                     </a>
                 </li>
 
-                <li class="nav-item">
-                    <a href="/list">
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'MANAGER')">
+                    <a href="/account/list">
                         <i class="fas fa-layer-group"></i>
-                        <p>Management Account</p>
+                        <p>Manage Account</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'MANAGER')">
+                    <a href="/inventory">
+                        <i class="fas fa-warehouse"></i>
+                        <p>Inventory</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'EMPLOYEE', 'MANAGER')">
+                    <a href="/manage-booking">
+                        <i class="fas fa-home"></i>
+                        <p>Manage Booking</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'EMPLOYEE', 'MANAGER')">
+                    <a href="/order/manage">
+                        <i class="fas fa-box"></i>
+                        <p>Manage Order</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'MANAGER')">
+                    <a href="/product/list">
+                        <i class="fas fa-box"></i>
+                        <p>Manage Product</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasAnyRole('STORE_OWNER', 'MANAGER')">
+                    <a href="/category/list">
+                        <i class="fas fa-clipboard-list"></i>
+                        <p>Manage Category</p>
+                    </a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasRole('CUSTOMER')">
+                    <a href="/booking-table">
+                        <i class="fas fa-calendar"></i>
+                        <p>Booking Table</p>
                     </a>
                 </li>
             </ul>
