--- a/coolcafe/src/main/resources/templates/login.html
+++ b/coolcafe/src/main/resources/templates/login.html
@@ -24,6 +24,10 @@
             <span th:text="${success}"></span>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        <div th:if="${param.error}" class="alert alert-danger alert-dismissible fade show" role="alert">
+            <span>Wrong username or password!</span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-12">
@@ -32,14 +36,14 @@
                             <h3>Login to <strong>CoolCafe`</strong></h3>
                             <!-- <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p> -->
                         </div>
-                        <form action="#" method="post">
+                        <form th:action="@{/login}" method="post">
                             <div class="form-group first">
                                 <label for="username">Username</label>
-                                <input type="text" class="form-control" placeholder="Your Username" id="username">
+                                <input name="username" type="text" class="form-control" placeholder="Your Username" id="username">
                             </div>
                             <div class="form-group last mb-3">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" placeholder="Your Password" id="password">
+                                <input name="password" type="password" class="form-control" placeholder="Your Password" id="password">
                             </div>
 
                             <div class="d-sm-flex mb-5 align-items-center">
