--- a/coolcafe/src/main/resources/templates/register.html
+++ b/coolcafe/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
+    <title>CoolCafe`</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/css3/style.css}">
@@ -58,12 +58,14 @@
 
                     <div class="form-group">
                         <label for="phone_number">Phone Number:</label>
-                        <input th:field="*{phoneNumber}" type="text" name="phone_number" id="phone_number" />
+                        <input th:field="*{phoneNumber}" type="text" name="phone_number" id="phone_number" pattern="^0[0-9]{9,10}$"
+                               title="Phone number must start with 0 and contain 10 to 11 digits" />
                     </div>
 
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input th:field="*{email}" type="email" name="email" id="email" />
+                        <input th:field="*{email}" type="email" name="email" id="email" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                               title="Please enter a valid email address (e.g., example@domain.com)" />
                     </div>
                     <div class="form-submit">
                         <input type="reset" value="Reset All" class="submit" name="reset" id="reset" />
